syntax = "proto3";

package Protocol;
option csharp_namespace = "Google.Protobuf.Protocol";

enum EHeroGender
{
	EHERO_GENDER_NONE = 0;
	EHERO_GENDER_MALE = 1;
	EHERO_GENDER_FEMALE = 2;
}

enum EHeroClass
{
	EHERO_CLASS_NONE = 0;
	EHERO_CLASS_WARRIOR = 1;
	EHERO_CLASS_RANGER = 2;
	EHERO_CLASS_WIZARD = 3;
	EHERO_CLASS_ROGUE = 4;
}

enum ECreateHeroResult
{
	ECREATE_HERO_RESULT_NONE = 0;
	ECREATE_HERO_RESULT_SUCCESS = 1;
	ECREATE_HERO_RESULT_FAIL_DUPLICATE_NAME = 2;
}

enum EObjectState 
{
	EOBJECT_STATE_NONE = 0;
	EOBJECT_STATE_IDLE = 1;
	EOBJECT_STATE_MOVE = 2;
	EOBJECT_STATE_SKILL = 3;
	EOBJECT_STATE_DEAD = 4;
}

enum EMoveDir
{
	EMOVE_DIR_NONE = 0;
	EMOVE_DIR_UP = 1;
	EMOVE_DIR_DOWN = 2;
	EMOVE_DIR_LEFT = 3;
	EMOVE_DIR_RIGHT = 4;
	EMOVE_DIR_UP_LEFT = 5;
	EMOVE_DIR_UP_RIGHT = 6;
	EMOVE_DIR_DOWN_LEFT = 7;
	EMOVE_DIR_DOWN_RIGHT = 8;
}

enum EGameObjectType 
{
	EGAME_OBJECT_TYPE_NONE = 0;
	EGAME_OBJECT_TYPE_HERO = 1;
	EGAME_OBJECT_TYPE_MONSTER = 2;
	EGAME_OBJECT_TYPE_PROJECTILE = 3;
	EGAME_OBJECT_TYPE_ITEM_HOLDER = 4;
}

enum ECellCollisionType
{
	ECELL_COLLISION_TYPE_NONE = 0;
	ECELL_COLLISION_TYPE_WALL = 1;
}

enum EFindPathResult
{
    EFIND_PATH_RESULT_NONE = 0;
    EFIND_PATH_RESULT_FAIL_LERPCELL = 1;
    EFIND_PATH_RESULT_FAIL_NO_PATH = 2;
    EFIND_PATH_RESULT_FAIL_MOVE_TO = 3;
    EFIND_PATH_RESULT_FAIL_SAME_POSITION = 4;
    EFIND_PATH_RESULT_SUCCESS = 5;
}

enum ERespawnType 
{
	RESPAWN_TYPE_NONE = 0;
	RESPAWN_TYPE_RANDOM_INTERVAL = 1;
	RESPAWN_TYPE_MAINTAIN_COUNT = 2;
}

enum EEffectType
{
   EEFFECT_TYPE_NONE = 0;
   EEFFECT_TYPE_LIFESTEAL = 1;
   EEFFECT_TYPE_BUFF = 2;
   EEFFECT_TYPE_STUN = 3;
   EEFFECT_TYPE_DOT = 4;

}  

enum EDurationPolicy
{
	Instant = 0;
	Duration = 1;
	Infinite = 2;
}

enum EOwnerStat
{
	SkillCaster =0;
	EffectOwner = 1;
}

enum EStatType
{
	MaxHp = 0;
	Hp = 1;
	HpRegen = 2;
	MaxMp = 3;
	Mp = 4;
	MpRegen = 5;
	Attack = 6;
	Defence = 7;
	MissChance = 8;
	AttackSpeed = 9;
	MoveSpeed = 10;
	CriRate = 11;
	CriDamage = 12;
	Str = 13;
	Dex = 14;
	Int = 15;
	Con = 16;
	Wis =17;
}

enum ESkillType
{
	ESKILL_TYPE_NONE = 0;
	ESKILL_TYPE_SELF_CENTERED_AREA_SKILL = 1;
	ESKILL_TYPE_TARGET_CENTERED_AREA_SKILL = 2;
	ESKILL_TYPE_TARGET_SKILL = 3;
	ESKILL_TYPE_PROJECTILE_SKILL = 4;
}