syntax = "proto3";

package Protocol;
option csharp_namespace = "Google.Protobuf.Protocol";

import public "Enum.proto";
import public "Struct.proto";

message S_Connected 
{
}

message C_AuthReq
{
	string jwt = 1;
}

message S_AuthRes
{
	bool success = 1;
}

message C_HeroListReq
{
}

message S_HeroListRes
{
	repeated MyHeroInfo heroes = 1;
}

message C_CreateHeroReq
{
	string name = 1;
	EHeroGender gender = 2;
	EHeroClass classType = 3;
}

message S_CreateHeroRes
{
	ECreateHeroResult result = 1;
}

message C_DeleteHeroReq
{
	int32 heroIndex = 1;
}

message S_DeleteHeroRes
{
	bool success = 1;
	int32 heroIndex = 2;
}

message C_EnterGame 
{
}

message S_EnterGame 
{
	MyHeroInfo myHeroInfo = 1;
	bool respawn = 2;
}

message S_LeaveGame
{

}

message S_Spawn 
{
	repeated HeroInfo heroes = 1;
}

message S_Despawn 
{
	repeated int32 objectIds = 1;
}

message C_Move 
{
	PositionInfo posInfo = 1;
}

message S_Move 
{
	int32 objectId = 1;
	PositionInfo posInfo = 2;
}